# xsolarlogger

./: .gitignore  CMakeLists.txt  README.md
cmake/: toolchain-arm64.cmake
etc/: config.cfg
include/: configuration.h  influxdb.h  logger.h  mqtt_sink.h  mqtt_src.h  squeue.h
src/: configuration.c  datalog.c  influxdb.c  influxdb_sink.c  kafka_sink.c  logger.c  main.c  mosq_sink.c  mosq_src.c  mqtt_sink.c  mqtt_src.c  nats_sink.c  redis_sink.c  squeue.c
systemd/: xsolarbridge.service
